--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,9 +11,22 @@ path = "src/main.rs"
 name = "zero2prod"
 
 [dependencies]
+config = "0.15.9"
 actix-web = "4"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 serde = { version = "1", features = ["derive"]}
+
+[dependencies.sqlx]
+version = "0.8"
+default-features = false
+features = [
+    "runtime-tokio-rustls",
+    "macros",
+    "postgres",
+    "uuid",
+    "chrono",
+    "migrate"
+]
 
 [dev-dependencies]
 reqwest = "0.12.12"
