--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL="postgres://app:secret@host.docker.internal:5432/newsletter"
+DATABASE_URL="postgres://app:secret@localhost:5432/newsletter"
