--- a/configuration/base.yaml
+++ b/configuration/base.yaml
@@ -1,6 +1,6 @@
-application_port: 8000
+application:
+  port: 8000
 database:
-  host: "host.docker.internal"
   port: 5432
   username: "postgres"
   password: "password"
