--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,8 @@ tracing-bunyan-formatter = "0.3"
 tracing-log = "0.2"
 secrecy = { version = "0.8", features = ["serde"] }
 tracing-actix-web = "0.7"
+unicode-segmentation = "1"
+validator = "0.20.0"
 
 [dependencies.sqlx]
 version = "0.8"
@@ -39,3 +41,8 @@ features = [
 
 [dev-dependencies]
 reqwest = "0.12.12"
+claims = "0.8.0"
+fake = "4.0.0"
+quickcheck = "1.0.3"
+quickcheck_macros = "1"
+rand = "0.9.0"
