--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,10 +39,17 @@ features = [
     "migrate"
 ]
 
+[dependencies.reqwest]
+version = "0.12"
+default-features = false
+features = ["json", "rustls-tls"]
+
 [dev-dependencies]
-reqwest = "0.12.12"
 claims = "0.8.0"
 fake = "4.0.0"
 quickcheck = "1.0.3"
 quickcheck_macros = "1"
 rand = "0.9.0"
+tokio = { version = "1", features = ["rt", "macros"] }
+wiremock = "0.6"
+serde_json = "1"
